// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-bxtkkv-0 lfIDZX"
>
  <h1
    class="profiles__Title-bxtkkv-1 hRAvWl"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 iCNnxQ"
  >
    <li
      class="profiles__Item-bxtkkv-5 htEhk"
    >
      <img
        class="profiles__Picture-bxtkkv-3 jjYvSI"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-4 koNbyr"
      >
        Karl Hadwen
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-bxtkkv-0 lfIDZX"
>
  <h1
    class="profiles__Title-bxtkkv-1 hRAvWl"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-bxtkkv-2 iCNnxQ"
  >
    <li
      class="profiles__Item-bxtkkv-5 htEhk"
    >
      <img
        class="profiles__Picture-bxtkkv-3 jjYvSI"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-bxtkkv-4 koNbyr"
      >
        Karl Hadwen
      </p>
    </li>
  </ul>
</div>
`;
